crates/monochange/src/__tests__/snapshots/monochange__versioned_files__tests__build_versioned_file_updates_uses_ecosystem_versioned_files.snap
---
source: crates/monochange/src/__tests__/versioned_files_tests.rs
expression: "snapshot_file_updates(&root, updates)"
---
## packages/app/package.json
{
  "name": "@example/app",
  "version": "1.0.0",
  "dependencies": {
    "@example/app": "^1.2.3"
  }
}
