crates/monochange/src/__tests__/snapshots/monochange__versioned_files__tests__npm_versioned_file_respects_explicit_version_field_selection@explicit_version_shared.snap
---
source: crates/monochange/src/__tests__/versioned_files_tests.rs
expression: contents
---
{
  "name": "@acme/api",
  "version": "3.0.0",
  "dependencies": {
    "@acme/api": "~2.4.0",
    "external-lib": "^9.0.0"
  }
}
